src/style/style.css
/* ... */
#TIPP__arrowTurnLeftIcon {
  font-size: 50px;
}

@media screen and (max-width: 1300px) {
  #TIPP {
    width: 100vw;
    height: 100vh;
    overflow: scroll;
    color: #FFFFFF;
    background-color: #3E3F3A;
    display: grid;
    grid-template: 2fr 4fr 15%/100%;
    text-align: center;
    align-items: center;
    justify-items: center;
  }
  .TIPP__image {
    height: 100%;
    width: auto;
  }
}
@media screen and (max-width: 900px) {
  .rectangleTipp {
    grid-template: 100%/100%;
    height: 21%;
  }
  .TIPP__imageContainer {
    display: none;
  }
}
@media screen and (max-width: 500px) {
  .rectangleTipp {
    height: 50%;
  }
  #TIPP {
    display: flex;
    flex-direction: column;
  }
  #TIPP__title--secondary {
    margin: 50px 20px 150px;
  }
  #TIPP__arrowTurnLeftContainer {
    margin: 200px 0;
    width: 100px;
    padding: 25px 0;
  }
  #TIPP__arrowTurnLeftIcon {
    font-size: 50px;
  }
}
@media screen and (max-width: 410px) {
  #TIPP__title--secondary {
    margin: 50px 20px 250px;
  }
  #TIPP__arrowTurnLeftContainer {
    margin: 250px 0;
  }
}
#Webresources__arrowTurnLeftContainer {
  height: 80px;
  width: 80px;
  margin: 20px;
}
#Webresources__arrowTurnLeftIcon {
  font-size: 50px;
}
#Webresources__image {
  height: 350px;
}

.Webresources__button {
  background-color: #B2CBE3;
  font-size: 16px;
  color: black;
  border: 1px solid white;
  margin: 10px;
  padding: 0 15px;
  border-radius: 20px;
}
.Webresources__button a {
  color: black;
}
.Webresources__button a:hover {
  color: red;
  cursor: pointer;
}
.Webresources__button:hover {
  border: red solid 1px;
}

@media screen and (max-width: 1300px) and (min-width: 799px) {
  #Webresources {
    display: grid;
    grid-template: 100vh/40% 40% 8%;
  }
}
@media screen and (max-width: 798px) {
  #Webresources {
    width: 100vw;
    height: 100vh;
    overflow: scroll;
    color: #FFFFFF;
    background-color: #3E3F3A;
    text-align: center;
    align-items: center;
    justify-items: center;
  }
  #Webresources__title--primary {
    font-size: 40px;
  }
  #Webresources__image {
    height: 250px;
  }
  #Webresources__arrowTurnLeftContainer {
    margin: auto;
  }
}
#thermometer {
  position: relative;
  z-index: 10;
  overflow: hidden;
  font-family: "Inknut Antiqua", serif;
  font-style: normal;
  color: #FFFFFF;
  background-color: #3E3F3A;
  width: 100%;
  height: 100%;
}
#thermometer__titleContainer {
  width: 100vw;
  display: flex;
  justify-content: end;
  align-items: center;
  text-align: center;
}
#thermometer__titleContainer i {
  font-size: 50px;
}
#thermometer__titleContainer i:hover {
  color: #fd0505;
  cursor: pointer;
}
#thermometer__titleContainer--bubble {
  display: flex;
  font-family: Arial;
  justify-content: center;
  align-items: center;
  font-size: 12px;
  width: 200px;
  height: 50px;
  color: white;
  background-color: black;
  border-radius: 20px;
  margin-right: 10px;
}
#thermometer__titleContainer--bubble:hover {
  font-size: 13px;
  cursor: pointer;
}
#thermometer__titleContainer > div {
  margin: 0 50px 0 200px;
  display: flex;
}
#thermometer__imageContainer {
  display: flex;
  height: 90vh;
  align-items: center;
  justify-content: center;
}
#thermometer__imageContainer--image {
  display: flex;
  align-items: center;
}
#thermometer__imageContainer--image img {
  height: 90vh;
}
#thermometer__imageContainer--triangle {
  display: grid;
  align-items: center;
  grid-template: repeat(5, 15vh)/5vw;
}
#thermometer__imageContainer--triangle img {
  height: 8vh;
}
#thermometer__imageContainer--rectangle {
  width: 40vw;
  margin: 0 30px;
  border-radius: 30px;
  display: flex;
  flex-direction: column;
  padding: 10px;
}
#thermometer__arrowTurnLeftContainer {
  height: 80px;
  width: 80px;
  margin: 20px;
}
#thermometer__arrowTurnLeftIcon {
  font-size: 50px;
}
#thermometer__frameEmotion {
  height: 50% !important;
  margin: auto;
}

.thermometer__triangle {
  position: relative;
  display: flex;
  align-items: center;
}
.thermometer__triangle--red {
  position: absolute;
  left: 0px;
  opacity: 0;
}
.thermometer__triangle--red:hover {
  cursor: pointer;
  opacity: 1;
}

#emotionContainer__selected--title {
  margin-top: -50px;
}
#emotionContainer__selected {
  display: grid;
  grid-template: 100%/1.5fr 2fr;
  text-align: center;
  align-items: center;
  margin: 10px 0;
}
#emotionContainer__notSelected {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#emotionContainer__notSelected--icons img {
  width: 20%;
  height: 20%;
}

#containerListOfActions {
  display: grid;
  grid-template: 100%/150px 65%;
  border: 1px solid #000000;
}
#containerListOfActions__text {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

#listOfActions__img {
  height: 100px !important;
  width: 148px;
  margin: auto;
}

@media screen and (max-width: 1550px) {
  #emotionContainer__selected {
    display: flex;
    flex-direction: column;
  }
  #emotionContainer__selected--title {
    font-size: 20px;
  }
  #thermometer__frameEmotion {
    width: 200px;
    margin-top: -50px;
  }
}
@media screen and (max-width: 1400px) {
  #thermometer__titleContainer {
    flex-direction: column;
  }
  #thermometer__titleContainer > div {
    margin: 0;
  }
}
/* ... */

